--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Brok3nPix3l.github.io</title>
+		<title>brok3npix3l.github.io</title>
 	</head>
 	<body>
 		<h1>Hello World</h1>
